Development
    Changed File->DVD to File->Disc and moved Audio CD and added Video CD to the submenu
    Improved audio and subtitle selection, will put id in the menu if no label exists
    Fix missing data in copy_playlist
    Put media display name on status icon tooltip when playing or paused
    Add in loop to play_iter to flush all events prior to next file being played
    When running in verical layout mode, allow the media data to remain visible
    Read album off the ipod
    Add album to the playlist
    Disable cover art fetch command line option
    Update recent menu and title bar to show artist and title when available
    Don't lookup coverart if we got it from the ipod
    Convert tempnam to gmp_tempname
    Fix memory leak in parse_basic
    Fix problem with opening a ASF reference playlist
    Change filtering rules to only use song title when necessary, gives better results
    In cover art url retrival only add a value to the filter if it is more than 0 characters
    Added album title to the list store
    Make album cover loading multithreaded, now it doesn't lag
    Implement Album Cover downloading using libcurl (new library requirement)
        Non-threaded so might be slow.
    Remove metadata parser from thread_reader, we already know all of the info from loading file
    Consolidate code into play_iter
    RIP play_file (Nov 25,2006 - Nov 7,2008), replace with play_iter
    Rework get_metadata, make it more flexible
    Move gnome-mplayer.conf (when running in non-gconf mode) to .gnome-mplayer from .mplayer
    Create $HOME/.gnome-mplayer directory for preferences and cache
    Add some more metadata items to the list store
    Add in the code to try and fetch the cover art url from musicbrainz
    Put some fixes in for the thumbnail support
    Add in support for compiling with libmusicbrainz, is not used yet
    Add in support for reading in iPod artwork, still not displayed
    Fix operation of Open Recent Menu