@@ -1,4 +1,5 @@
 Development
+    Fix Audio and Subtitle selection so that if we have a label the id isn't shown as well
     Changed File->DVD to File->Disc and moved Audio CD and added Video CD to the submenu
     Improved audio and subtitle selection, will put id in the menu if no label exists
     Fix missing data in copy_playlist
